--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "eslint": "^4.18.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "styled-components": "^3.1.6"
   },
