--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^4.10.1",
     "eslint": "^4.18.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "react-redux-firebase": "^2.0.4",
     "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
     "styled-components": "^3.1.6"
   },
   "scripts": {
@@ -17,5 +21,8 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "firebase-tools": "^3.17.4"
   }
 }
