--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebase": "^4.10.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.18.1",
+    "firebase": "^4.10.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-lottie": "^1.0.0",
-    "react-router-dom": "^4.2.2",
     "react-redux": "^5.0.7",
     "react-redux-firebase": "^2.0.4",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
     "styled-components": "^3.1.6"
   },
