--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "firebase-tools": "^3.17.4",
     "jest-cli": "^20.0.4",
     "jest-styled-components": "^5.0.0",
-    "redux-mock-store": "^1.5.1"
+    "redux-mock-store": "^1.5.1",
+    "sinon": "^4.4.2"
   }
 }
