--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier src/*",
+    "prettier.write": "prettier src/* --write"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,6 +35,7 @@
     "firebase-tools": "˜3.17.4",
     "jest-cli": "˜20.0.4",
     "jest-styled-components": "˜5.0.0",
+    "prettier": "^1.11.1",
     "redux-mock-store": "˜1.5.1",
     "sinon": "˜4.4.2"
   }
