--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^4.10.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-google-button": "^0.5.1",
     "react-lottie": "^1.0.0",
     "react-redux": "^5.0.7",
     "react-redux-firebase": "^2.0.4",
