--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-test-renderer": "^16.2.0",
+    "react-transition-group": "^2.3.0",
     "redux": "^3.7.2",
     "styled-components": "^3.1.6"
   },
