--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "firebase": "^4.10.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-flip-move": "^3.0.2",
     "react-lottie": "^1.0.0",
     "react-redux": "^5.0.7",
-    "react-redux-firebase": "^2.0.4",
+    "react-redux-firebase": "^2.1.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-shuffle": "^2.1.0",
     "react-test-renderer": "^16.3.0",
     "react-transition-group": "^2.3.0",
     "redux": "^3.7.2",
